------------------- pcapsipdump 0.1.4 ------------------------------------------
Fri May 11 22:31:49 MSD 2007
        * Avoid file trimming - add 'packet-buffered' (-U) option,
          add SIGTERM graceful handler
        * Fix 64-bit platform pointer issues (use char* in arithmetics instead
          of uint32_t)
        * Fix sip header parsing (RFC 3261 allows no-space-after-semicolon
          syntax, however it is not show in examples and, thus, rarely used)

Thu Apr  2 11:51:33 MSD 2007
        * Include "verbosity level" command-line option

------------------- pcapsipdump 0.1.3 ------------------------------------------
Thu Mar 22 18:35:16 MSK 2007
        * Fix compiler waring about variable, that might be used uninitialized 

Fri Mar  9 16:41:04 MSK 2007
        * Fix bug, leading to segfault on malformed SIP packets

Fri Feb  9 14:50:56 MSK 2007
        * use "$(CC) $(CPPFLAGS) $(LDFLAGS)" instead of hardcoded "c++ -Wall s"
           in order to simplify cross-compiling

------------------- pcapsipdump 0.1.2 ------------------------------------------
Mon Jan 29 18:08:02 MSK 2007
        * add basic command-line options:
	   [-fp] [-i <interface>] [-r <file>] [-d <working directory>]
    	   -f     Do not fork or detach from controlling terminal;
           -p     Do not put the interface into promiscuous mode.
        * all following contributed by John Van Ostrand:
        * added an optional fork() call to the pcapsipdump code so that it runs
	   as a daemon
	* added an install target to the Makefile
	* added a redhat directory with Red Hat/CentOS/Fedora init script,
	   sysconfig script, RPM spec file and README.txt

------------------- pcapsipdump 0.1.1 ------------------------------------------
Sun Aug 13 15:08:44 MSD 2006
        * minor code cleanup in order to (hopefely) improve portability
	* added usage printout
	* changed storage place from /home/pcapsipdump to /var/spool/pcapsipdump
	* added copyright clauses to each file and LICENCE file
